--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.33.1",
     "@google/generative-ai": "^0.21.0",
     "next": "15.1.0",
+    "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
